fix quote styles on smaller screens

--- a/website/assets/styles/pages/software-management.less
+++ b/website/assets/styles/pages/software-management.less
@@ -473,6 +473,10 @@
     [parasails-component='scrollable-tweets'] {
       [purpose='tweets'] {
         margin-bottom: 56px;
+        [purpose='quote'] {
+          padding: 0;
+        }
+
       }
     }
   }
